# capsulenet

./: Cargo.toml  shell.nix
.direnv/: cache-.335733.f6ddd55d5f9  drv
src/: main.rs  main.rs.bu
